# KKManager

src/: CMakeLists.txt  CMakeSettings.json
src/CWrapperGen/: CMakeCache.txt  CTestCustom.ctest  CWrapperGen.vcxproj  CWrapperGen.vcxproj.filters
src/KKManager.Updater/Downloader/: UpdateDownloadCoordinator.cs
src/KKManager.Updater/Sources/: FtpUpdater.cs  UpdateSourceBase.cs
